--- a/index-en.html
+++ b/index-en.html
@@ -463,13 +463,13 @@
           </div>
         </div>
         <div class="copy-flex">
-          <figure >
+          <figure class="fot-logo-1">
             <img src="images/copy.png" class="copywrite" />
-          </figure>
+          </figure >
           <div class="copy-right">
             Al-Omrania Company for Metal Forming 2022 - one of Saleh Al-Mudaifer Sons Holding Companies
           </div>
-          <figure >
+          <figure class="fot-logo-2">
             <img src="images/copy-2.png" class="copywrite" />
           </figure>
         </div>
