--- a/index-en.html
+++ b/index-en.html
@@ -34,7 +34,7 @@
             <div class="fixed-logo">
               <figure class="logo-sm">
                 <a href="#"
-                  ><img src="images/logo-sm.png" class="img-fluid"
+                  ><img src="images/logo.png" class="img-fluid"
                 /></a>
               </figure>
             </div>
