--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="fixed-logo">
               <figure class="logo-sm">
                 <a href="#"
-                  ><img src="images/logo-sm.png" class="img-fluid"
+                  ><img src="images/logo.png" class="img-fluid"
                 /></a>
               </figure>
             </div>
@@ -108,7 +108,7 @@
                 </li>
               </ul>
             </div>
-            <div class="search-section">
+            <div class="search-section" id="search-icon">
               <form class="search-form">
                 <input
                   class="search-input"
@@ -117,7 +117,7 @@
                   value=""
                   placeholder= "البحث"
                 />
-                <button class="search-button">
+                <button class="search-button" >
                   <i class="las la-search"></i>
                 </button>
               </form>
